--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,118 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.landing-container {
+  width: 100vw;
+  height: 100vh;
+  background: rgb(0, 250, 191);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 250, 191, 1) 0%,
+    rgba(110, 198, 245, 1) 38%,
+    rgba(243, 255, 0, 1) 100%
+  );
+  display: flex;
+  justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.landing-box {
+  height: 50vh;
+  width: 40vw;
+  background: rgb(110, 198, 245);
+  background: linear-gradient(
+    90deg,
+    rgba(110, 198, 245, 1) 8%,
+    rgba(234, 250, 0, 1) 100%
+  );
+  border-radius: 15px;
+  position: relative;
+  margin: auto;
+  box-shadow: 3px 3px 3px rgb(204, 204, 204);
+}
+.emoji {
+  width: 200px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1 {
+  color: white;
+  font-size: 50px;
+  font-family: sans-serif;
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+#input-box {
+  margin-top: -25px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.login-input {
+  display: flex;
+  width: 300px;
+  margin: auto;
+  justify-content: space-evenly;
+}
+
+.nameAndPassword {
   color: white;
+  font-size: 20px;
+  margin-right: 10x;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.input {
+  height: 30px;
+  margin-top: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.LoginAndReButton {
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
+  font-size: 15px;
+  margin: 10px;
+  font-weight: bold;
+}
+
+.nav-bar {
+  height: 100vh;
+  width: 8vw;
+  position: relative;
+  margin-left: 0px;
+  background: linear-gradient(
+    180deg,
+    rgba(110, 198, 245, 1) 8%,
+    rgba(234, 250, 0, 1) 100%
+  );
+}
+
+#profilePic {
+  width: 120px;
+  height: 120px;
+  background-color: white;
+  border-radius: 50%;
+  position: relative;
+  margin-top: 30px;
+}
+
+.link {
+  margin-top: 180px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.logout {
+  margin-top: 200px;
+  width: 65px;
+  height: 65px;
+  border-radius: 50%;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.add-form-container {
+  width: 400px;
+  height: 400px;
+  background-color: yellow;
+  margin: auto;
 }
