--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,7 @@ h1 {
 .nav-bar {
   height: 100vh;
   width: 130px;
-  position: relative;
+  position: fixed;
   margin-left: 0px;
   background: linear-gradient(
     180deg,
@@ -88,8 +88,8 @@ h1 {
 }
 
 #profilePic {
-  width: 120px;
-  height: 120px;
+  width: 100px;
+  height: 100px;
   background-color: white;
   border-radius: 50%;
   position: relative;
@@ -97,13 +97,13 @@ h1 {
 }
 
 .link {
-  margin-top: 180px;
+  margin-top: 80px;
   font-size: 20px;
   font-weight: bold;
 }
 
 .logout {
-  margin-top: 200px;
+  margin-top: 80px;
   width: 65px;
   height: 65px;
   border-radius: 50%;
@@ -146,17 +146,17 @@ h1 {
 
 .postBox {
   display: flex;
-  justify-content: space-evenly;
   background-color: lightcyan;
+  justify-content: space-around;
   margin-top: 20px;
   width: 70vw;
-  height: 120px;
+  height: 90px;
   margin-left: 100px;
 }
 
 .postProfilePic {
-  width: 80px;
-  height: 80px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
 }
 
@@ -172,4 +172,19 @@ h1 {
   width: 70vw;
   height: 80px;
   background-color: lightgray;
+}
+
+.dashboard {
+  margin-left: 10vw;
+}
+
+.profilePicture {
+  position: absolute;
+  margin-left: 50vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.singlePostBox {
+  margin-left: 20vw;
 }
